@@ -1,0 +1,42 @@
+# Copyright (c) 2009 Lemur Consulting Ltd
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in
+# all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE.
+r"""Get the settings used for the tests.
+
+"""
+__docformat__ = "restructuredtext en"
+
+# Ensure flax is on the path.
+import os.path
+up = os.path.dirname
+import sys
+sys.path.insert(0, up(up(up(up(os.path.abspath(__file__))))))
+
+# Get any external dependencies onto the path too.
+import ext
+
+# Import things that all tests will need.
+import unittest
+import wsgiwapi
+import wsgiwapi.unittests.harness as wwharness
+
+# Set up some standard names
+main = unittest.main
+
+TestCase = wwharness.TestCase
